--- a/index.html
+++ b/index.html
@@ -7,10 +7,13 @@
   <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/docsify/themes/vue.css">
 </head>
 <body>
-  <div id="app"></div>
+  <div id="app">文档加载ing...</div>
   <script>
     window.$docsify = {
       //...
+	  name: '',
+	  repo: '',
+	  loadSidebar: true
     }
   </script>
   <script src="//cdn.jsdelivr.net/npm/docsify/lib/docsify.min.js"></script>
